Added email confirmation to event creation

--- a/views/create.erb
+++ b/views/create.erb
@@ -11,6 +11,9 @@
       <label host="name">Host:</label>
       <input type='text' name='host'/><br/>
 
+      <label for="email">Email:</label>
+      <input type='text' name='email'/><br/>
+
       <label for="address">Address:</label>
       <input type='text' name='address'/><br/>
 
